2025-10-24  dana  <dana@dana.is>

	* Joshua Krusell: 53988: Src/Modules/zutil.c,
	Test/V12zparseopts.ztst: fix zparseopts segfault

2025-10-23  Oliver Kiddle  <opk@zsh.org>

	* Christopher Bock: github #131 (with tweaks by dana):
	Completion/Debian/Command/_dpkg, Completion/Debian/Command/_schroot,
	Completion/Unix/Command/_libvirt, Completion/Debian/Type/_deb_files,
	Completion/Debian/Command/_madison,
	Completion/Unix/Command/_smartmontools: add missing options

	* Kevin Cox: github #147: Completion/Unix/Command/_git,
	Completion/Unix/Command/_ssh, Completion/Unix/Type/_hosts:
	Clean up some leaked variables in completion functions

	* 53999: Src/module.c: remove further remnants of ansi2knr
	support from AIX specific code

	* 54000: Completion/BSD/Command/_bectl: new completion

2025-10-21  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* Mike Gilbert: 53992: Src/utils.c, configure.ac: check for
	declaration of fpurge() instead of its link-ability (as a
	workaround of the problem of musl-libc)

2025-10-02  Oliver Kiddle  <opk@zsh.org>

	* 53985: Completion/Unix/Command/_git: update to 2.51

2025-09-30  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* Christoph Erhardt: 53981: Completion/Redhat/Command/_dnf5:
	fix completion of local rpm files

2025-09-29  Oliver Kiddle  <opk@zsh.org>

	* Ryan Rotter: github #145: Completion/Unix/Command/_install:
	update options completion

	* 53970 based on github #131 by Christopher Bock:
	Completion/Unix/Command/_zfs: complete all dataset properties
	for zfs allow and support comma separated list for zfs scripts

	* 53969: Completion/Unix/Command/_date,
	Completion/Unix/Command/_env, Completion/Unix/Command/_ping:
	completion updates for Unix utilities in macOS 15.5

	* 53968: Completion/Linux/Command/_blkid,
	Completion/Linux/Command/_lvm2: new lvm2 and blkid completions

2025-09-25  Oliver Kiddle  <opk@zsh.org>

	* 53967: Completion/BSD/Command/_procstat,