@@ -1,3 +1,8 @@
+2025-10-24  Oliver Kiddle  <opk@zsh.org>
+
+	* 54001: Src/Zle/zle_keymap.c, Src/exec.c, Src/input.c, Src/jobs.c,
+	Src/utils.c: add missing uses of mod_export
+
 2025-10-24  dana  <dana@dana.is>
 
 	* Joshua Krusell: 53988: Src/Modules/zutil.c,
